# mail-indicator

./: .gitignore  Cargo.toml  LICENCIA.es  LICENSE.en  gede2.ini
src/: config.rs  http.rs  indicador.rs  mail.rs  main.rs  oauth.rs
src/autenticadores/: gmail_authenticator.rs  mod.rs
src/autenticadores/gmail/: autenticador.rs  mod.rs
src/google_api/: mod.rs
src/logs/: escritores.rs  mod.rs
