[package]
name = "mail-indicator"
version = "0.2.0"
authors = ["fpalacios <fedenator7@gmail.com>"]
edition = "2018"

[dependencies]
libappindicator = "0.4.0"
gtk             = "0.4.0"
glib            = "0.5.0"

imap = "1.0.2"

native-tls = "0.2"
oauth2     = "3.0.0-alpha.3"

http     = "0.1.17"
httparse = "1.3.4"
url      = "1.7.2"

reqwest = "0.9.20"

log    = "0.4.8"
log4rs = "0.8.3"

dirs = "2.0.2"

failure = "0.1.5"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }